dashboard menu: fix overlap by singlestat and panel link icon

--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -201,6 +201,9 @@ $zindex-tooltip:           1020;
 $zindex-navbar-fixed:      1030;
 $zindex-modal-backdrop:    1040;
 $zindex-modal:             1050;
+$zindex-typeahead:         1060;
+
+
 
 // Buttons
 //
